@@ -2,7 +2,7 @@ package Test2::Tools::HTTP::UA;
 
 use strict;
 use warnings;
-use 5.012;
+use 5.014;
 use Carp ();
 use File::Spec ();
 use Test2::Tools::HTTP::Apps;
